<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:elevation="3dp"
    android:id="@+id/container"
    android:background="@drawable/corner">

    <ImageView
        android:id="@+id/img_movies_poster"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        tools:src="@drawable/nopic"
        android:contentDescription="@string/movies_poster_path"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_movies_poster"
        android:layout_toRightOf="@+id/img_movies_poster"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_movies_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="@string/movies_title" />
        <TextView
            android:id="@+id/tv_movies_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="@string/movies_release_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img_movies_poster"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="59dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_star_black_24dp"/>
        <TextView
            android:id="@+id/tv_movies_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/movies_vote"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:textSize="13sp"/>
    </LinearLayout>
</RelativeLayout>